--- a/week5/newCalc.html
+++ b/week5/newCalc.html
@@ -165,7 +165,8 @@
             background-color: #DDDDDD;
             color: #333333;
         }
-        .topbutton:hover{
+
+        .topbutton:hover {
             background-color: #444444;
             color: #DDDDDD;
         }
@@ -175,7 +176,8 @@
             color: #333333;
             font-weight: bold;
         }
-        .button.numbutton:hover{
+
+        .button.numbutton:hover {
             background-color: #444444;
             color: #DDDDDD;
 
@@ -186,7 +188,8 @@
             color: #333333;
             font-weight: bold;
         }
-        .yellowbutton:hover{
+
+        .yellowbutton:hover {
             background-color: #fa7901;
             color: #DDDDDD;
         }
@@ -195,84 +198,130 @@
             background-color: #DDDDDD;
             color: #333333;
         }
-        .greybutton:hover{
+
+        .greybutton:hover {
             background-color: #444444;
             color: #DDDDDD;
         }
 
-        button:hover {
-
-        }
+        button:hover {}
     </style>
     <script>
         function numberButton(num) {
             document.getElementById('AC').innerHTML = 'CE';
-            if (document.getElementById('display2').innerHTML == '0') {
-                document.getElementById('display2').innerHTML = num;
+            if (document.getElementById('display1').innerHTML == '0') {
+                document.getElementById('display1').innerHTML = num;
             } else {
-                document.getElementById('display2').innerHTML += num;
+                document.getElementById('display1').innerHTML += num;
             }
         }
         let curValue = 0;
+        let result = 0;
         let operator = '';
 
         function plusButton() {
-            curValue = parseFloat(document.getElementById('display2').innerHTML);
-            document.getElementById('display2').innerHTML = 0;
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            result += curValue;
+            document.getElementById('display1').innerHTML = 0;
             operator = '+';
-            if (operator == '+') {
-                curValue += parseFloat(document.getElementById('display2').innerHTML);
-                document.getElementById('display2').innerHTML = curValue;
-            }
 
         }
         function minusButton() {
-            curValue = parseFloat(document.getElementById('display2').innerHTML);
-            document.getElementById('display2').innerHTML = 0;
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            if(result == 0){
+                result += curValue;
+            }
+            else{
+                preCalc();
+            }
+            document.getElementById('display1').innerHTML = 0;
             operator = '-';
 
         }
         function productButton() {
-            curValue = parseFloat(document.getElementById('display2').innerHTML);
-            document.getElementById('display2').innerHTML = 0;
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            if(result == 0){
+                result += curValue;
+            }
+            else{
+                preCalc();
+            }
+            document.getElementById('display1').innerHTML = 0;
             operator = '*';
 
         }
         function divideButton() {
-            curValue = parseFloat(document.getElementById('display2').innerHTML);
-            document.getElementById('display2').innerHTML = 0;
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            if(result == 0){
+                result += curValue;
+            }
+            else{
+                preCalc();
+            }
+            document.getElementById('display1').innerHTML = 0;
             operator = '/';
 
+        }
+        function preCalc() {
+            document.getElementById('AC').innerHTML = 'AC';
+            if (operator == '+') {
+                result += parseFloat(document.getElementById('display1').innerHTML);
+            }
+            else if (operator == '-') {
+                result -= parseFloat(document.getElementById('display1').innerHTML);
+            }
+            else if (operator == '*') {
+                result *= parseFloat(document.getElementById('display1').innerHTML);
+            }
+            else if (operator == '/') {
+                result /= parseFloat(document.getElementById('display1').innerHTML);
+            }
+            else { }
+            curValue = 0;
+            result = 0;
         }
 
         function equalButton() {
             document.getElementById('AC').innerHTML = 'AC';
             if (operator == '+') {
-                curValue += parseFloat(document.getElementById('display2').innerHTML);
-                document.getElementById('display2').innerHTML = curValue;
+                result += parseFloat(document.getElementById('display1').innerHTML);
+                document.getElementById('display1').innerHTML = result;
                 operator = '';
             }
             else if (operator == '-') {
-                curValue -= parseFloat(document.getElementById('display2').innerHTML);
-                document.getElementById('display2').innerHTML = curValue;
+                result -= parseFloat(document.getElementById('display1').innerHTML);
+                document.getElementById('display1').innerHTML = result;
                 operator = '';
             }
             else if (operator == '*') {
-                curValue *= parseFloat(document.getElementById('display2').innerHTML);
-                document.getElementById('display2').innerHTML = curValue;
+                result *= parseFloat(document.getElementById('display1').innerHTML);
+                document.getElementById('display1').innerHTML = result;
                 operator = '';
             }
             else if (operator == '/') {
-                curValue /= parseFloat(document.getElementById('display2').innerHTML);
-                document.getElementById('display2').innerHTML = curValue;
+                result /= parseFloat(document.getElementById('display1').innerHTML);
+                document.getElementById('display1').innerHTML = result;
                 operator = '';
             }
             else { }
+            curValue = 0;
+            result = 0;
         }
 
         function ACButton() {
-            document.getElementById('display2').innerHTML = '0';
+            document.getElementById('display1').innerHTML = '0';
             document.getElementById('AC').innerHTML = 'AC';
+        }
+
+        let curPm = 0;
+        function pmButton() {
+            curPm = document.getElementById('display1').innerHTML;
+            document.getElementById('display1').innerHTML = -curPm;
+        }
+
+        function dotButton() {
+            document.getElementById('display1').innerHTML += '.';
+
         }
     </script>
 </head>
@@ -284,7 +333,7 @@
     <div class="vertical">
         <table width=306 height=480 border=1>
             <tr>
-                <td colspan="4"><span class="cs_window" name="cs_display" id="display1">2829</span></td>
+                <td colspan="4"><span class="cs_window" name="cs_display" id="display1">0</span></td>
             </tr>
             <tr>
                 <td><button class="button topbutton">mc</button></td>
@@ -293,34 +342,34 @@
                 <td><button class="button topbutton">m+</button></td>
             </tr>
             <tr>
-                <td><button class="button greybutton">AC</button></td>
+                <td><button class="button greybutton" id="AC" onclick="ACButton();">AC</button></td>
                 <td><button class="button greybutton">√x</button></td>
                 <td><button class="button greybutton">%</button></td>
-                <td><button class="button yellowbutton">÷</button></td>
+                <td><button class="button yellowbutton" onclick="divideButton();">÷</button></td>
             </tr>
             <tr>
-                <td><button class="button numbutton">7</button></td>
-                <td><button class="button numbutton">8</button></td>
-                <td><button class="button numbutton">9</button></td>
-                <td><button class="button yellowbutton">x</button></td>
+                <td><button class="button numbutton" onclick="numberButton(7);">7</button></td>
+                <td><button class="button numbutton" onclick="numberButton(8);">8</button></td>
+                <td><button class="button numbutton" onclick="numberButton(9);">9</button></td>
+                <td><button class="button yellowbutton" onclick="productButton();">x</button></td>
             </tr>
             <tr>
-                <td><button class="button numbutton">4</button></td>
-                <td><button class="button numbutton">5</button></td>
-                <td><button class="button numbutton">6</button></td>
-                <td><button class="button yellowbutton">-</button></td>
+                <td><button class="button numbutton" onclick="numberButton(4);">4</button></td>
+                <td><button class="button numbutton" onclick="numberButton(5);">5</button></td>
+                <td><button class="button numbutton" onclick="numberButton(6);">6</button></td>
+                <td><button class="button yellowbutton" onclick="minusButton();">-</button></td>
             </tr>
             <tr>
-                <td><button class="button numbutton">1</button></td>
-                <td><button class="button numbutton">2</button></td>
-                <td><button class="button numbutton">3</button></td>
-                <td><button class="button yellowbutton">+</button></td>
+                <td><button class="button numbutton" onclick="numberButton(1);">1</button></td>
+                <td><button class="button numbutton" onclick="numberButton(2);">2</button></td>
+                <td><button class="button numbutton" onclick="numberButton(3);">3</button></td>
+                <td><button class="button yellowbutton" onclick="plusButton();">+</button></td>
             </tr>
             <tr>
-                <td><button class="button numbutton">0</button></td>
-                <td><button class="button numbutton">.</button></td>
-                <td><button class="button numbutton">+/-</button></td>
-                <td><button class="button yellowbutton">=</button></td>
+                <td><button class="button numbutton" onclick="numberButton(0);">0</button></td>
+                <td><button class="button numbutton" onclick="dotButton();">.</button></td>
+                <td><button class="button numbutton" onclick="pmButton();">+/-</button></td>
+                <td><button class="button yellowbutton" onclick="equalButton();">=</button></td>
             </tr>
             <tr>
                 <td><button class="button greybutton">π</button></td>
@@ -369,8 +418,8 @@
                 <td><button class="button greybutton">√x</button></td>
                 <td><button class="button greybutton">%</button></td>
                 <td><button class="button numbutton" onclick="numberButton(0);">0</button></td>
-                <td><button class="button numbutton">.</button></td>
-                <td><button class="button numbutton">+/-</button></td>
+                <td><button class="button numbutton" onclick="dotButton();">.</button></td>
+                <td><button class="button numbutton" onclick="pmButton();">+/-</button></td>
                 <td><button class="button yellowbutton" onclick="plusButton();">+</button></td>
                 <td><button class="button yellowbutton" onclick="equalButton();">=</button></td>
             </tr>
