--- a/week5/newCalc.html
+++ b/week5/newCalc.html
@@ -311,6 +311,8 @@
         function ACButton() {
             document.getElementById('display1').innerHTML = '0';
             document.getElementById('AC').innerHTML = 'AC';
+            curValue = 0;
+            result = 0;
         }
 
         let curPm = 0;
