--- a/week5/newCalc.html
+++ b/week5/newCalc.html
@@ -223,7 +223,12 @@
 
         function plusButton() {
             curValue = parseFloat(document.getElementById('display1').innerHTML);
-            result += curValue;
+            if (result == 0) {
+                result += curValue;
+            }
+            else {
+                preCalc();
+            }
             document.getElementById('display1').innerHTML = 0;
             document.getElementById('display2').innerHTML = 0;
             operator = '+';
@@ -276,6 +281,24 @@
             }
 
         }
+
+        function powButton() {
+            if (result == 0) {
+                result += parseFloat(document.getElementById('display1').innerHTML);
+                curValue = parseFloat(document.getElementById('display1').innerHTML);
+                document.getElementById('display1').innerHTML = 0;
+                document.getElementById('display2').innerHTML = 0;
+                operator = '^';
+            }
+            else {
+                curValue = parseFloat(document.getElementById('display1').innerHTML);
+                preCalc();
+                document.getElementById('display1').innerHTML = 0;
+                document.getElementById('display2').innerHTML = 0;
+                operator = '^';
+            }
+        }
+
         function preCalc() {
             if (operator == '+') {
                 result += parseFloat(document.getElementById('display1').innerHTML);
@@ -289,32 +312,41 @@
             else if (operator == '/') {
                 result /= curValue;
             }
+            else if (operator == '^') {
+                result = Math.pow(result, curValue);
+            }
             else { }
             curValue = 0;
         }
-
         function equalButton() {
             document.getElementById('AC').innerHTML = 'AC';
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
             if (operator == '+') {
-                result += parseFloat(document.getElementById('display1').innerHTML);
+                result += curValue;
                 document.getElementById('display1').innerHTML = result;
                 document.getElementById('display2').innerHTML = result;
                 operator = '';
             }
             else if (operator == '-') {
-                result -= parseFloat(document.getElementById('display1').innerHTML);
+                result -= curValue;
                 document.getElementById('display1').innerHTML = result;
                 document.getElementById('display2').innerHTML = result;
                 operator = '';
             }
             else if (operator == '*') {
-                result *= parseFloat(document.getElementById('display1').innerHTML);
+                result *= curValue;
                 document.getElementById('display1').innerHTML = result;
                 document.getElementById('display2').innerHTML = result;
                 operator = '';
             }
             else if (operator == '/') {
-                result /= parseFloat(document.getElementById('display1').innerHTML);
+                result /= curValue;
+                document.getElementById('display1').innerHTML = result;
+                document.getElementById('display2').innerHTML = result;
+                operator = '';
+            }
+            else if (operator == '^') {
+                result = Math.pow(result, curValue);
                 document.getElementById('display1').innerHTML = result;
                 document.getElementById('display2').innerHTML = result;
                 operator = '';
@@ -344,6 +376,13 @@
             document.getElementById('display2').innerHTML += '.';
 
         }
+
+        function rooButton() {
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            document.getElementById('display1').innerHTML = Math.sqrt(curValue);
+            document.getElementById('display2').innerHTML = Math.sqrt(curValue);
+        }
+
     </script>
 </head>
 
@@ -364,7 +403,7 @@
             </tr>
             <tr>
                 <td><button class="button greybutton" id="AC" onclick="ACButton();">AC</button></td>
-                <td><button class="button greybutton">√x</button></td>
+                <td><button class="button greybutton" onclick="rooButton();">√x</button></td>
                 <td><button class="button greybutton">%</button></td>
                 <td><button class="button yellowbutton" onclick="divideButton();">÷</button></td>
             </tr>
@@ -394,7 +433,7 @@
             </tr>
             <tr>
                 <td><button class="button greybutton">π</button></td>
-                <td><button class="button greybutton">x<sup>y</sup></button></td>
+                <td><button class="button greybutton" onclick="powButton();">x<sup>y</sup></button></td>
                 <td><button class="button greybutton">R2</button></td>
                 <td><button class="button greybutton">R0</button></td>
 
@@ -428,7 +467,7 @@
             </tr>
             <tr>
                 <td><button class="button greybutton">π</button></td>
-                <td><button class="button greybutton">x<sup>y</sup></button></td>
+                <td><button class="button greybutton" onclick="powButton();">x<sup>y</sup></button></td>
                 <td><button class="button numbutton" onclick="numberButton(1);">1</button></td>
                 <td><button class="button numbutton" onclick="numberButton(2);">2</button></td>
                 <td><button class="button numbutton" onclick="numberButton(3);">3</button></td>
@@ -436,7 +475,7 @@
                 <td><button class="button greybutton" id="AC" onclick="ACButton();">AC</button></td>
             </tr>
             <tr>
-                <td><button class="button greybutton">√x</button></td>
+                <td><button class="button greybutton" onclick="rooButton();">√x</button></td>
                 <td><button class="button greybutton">%</button></td>
                 <td><button class="button numbutton" onclick="numberButton(0);">0</button></td>
                 <td><button class="button numbutton" onclick="dotButton();">.</button></td>
