--- a/week5/newCalc.html
+++ b/week5/newCalc.html
@@ -383,6 +383,37 @@
             document.getElementById('display2').innerHTML = Math.sqrt(curValue);
         }
 
+        function percentButton() {
+            document.getElementById('AC').innerHTML = 'AC';
+            curValue = parseFloat(document.getElementById('display1').innerHTML);
+            if (operator == '+') {
+                result = result + (result * curValue/100);
+                document.getElementById('display1').innerHTML = result;
+                document.getElementById('display2').innerHTML = result;
+                operator = '';
+            }
+            else if (operator == '-') {
+                result = result - (result * curValue/100);
+                document.getElementById('display1').innerHTML = result;
+                document.getElementById('display2').innerHTML = result;
+                operator = '';
+            }
+            else if (operator == '*') {
+                result = result * curValue/100;
+                document.getElementById('display1').innerHTML = result;
+                document.getElementById('display2').innerHTML = result;
+                operator = '';
+            }
+            else if (operator == '/') {
+                result = result /curValue *100;
+                document.getElementById('display1').innerHTML = result;
+                document.getElementById('display2').innerHTML = result;
+                operator = '';
+            }
+            else { }
+
+        }
+
     </script>
 </head>
 
@@ -404,7 +435,7 @@
             <tr>
                 <td><button class="button greybutton" id="AC" onclick="ACButton();">AC</button></td>
                 <td><button class="button greybutton" onclick="rooButton();">√x</button></td>
-                <td><button class="button greybutton">%</button></td>
+                <td><button class="button greybutton" onclick="percentButton();">%</button></td>
                 <td><button class="button yellowbutton" onclick="divideButton();">÷</button></td>
             </tr>
             <tr>
@@ -476,7 +507,7 @@
             </tr>
             <tr>
                 <td><button class="button greybutton" onclick="rooButton();">√x</button></td>
-                <td><button class="button greybutton">%</button></td>
+                <td><button class="button greybutton" onclick="percentButton();">%</button></td>
                 <td><button class="button numbutton" onclick="numberButton(0);">0</button></td>
                 <td><button class="button numbutton" onclick="dotButton();">.</button></td>
                 <td><button class="button numbutton" onclick="pmButton();">+/-</button></td>
