--- a/week5/mobileCalc.html
+++ b/week5/mobileCalc.html
@@ -434,9 +434,8 @@
                 document.getElementById('display2').innerHTML = result;
                 operator = '';
             }
-            else { 
+            else { }
 
-            }
         }
 
     </script>
@@ -488,7 +487,7 @@
                 <td><button class="button yellowbutton" onclick="equalButton();">=</button></td>
             </tr>
             <tr>
-                <td><button class="button greybutton" onclick="numberButton(3.141592);">π</button></td>
+                <td><button class="button greybutton">π</button></td>
                 <td><button class="button greybutton" onclick="powButton();">x<sup>y</sup></button></td>
                 <td><button class="button greybutton">R2</button></td>
                 <td><button class="button greybutton">R0</button></td>
@@ -522,7 +521,7 @@
                 <td><button class="button greybutton">R0</button></td>
             </tr>
             <tr>
-                <td><button class="button greybutton" onclick="numberButton(3.141592);">π</button></td>
+                <td><button class="button greybutton">π</button></td>
                 <td><button class="button greybutton" onclick="powButton();">x<sup>y</sup></button></td>
                 <td><button class="button numbutton" onclick="numberButton(1);">1</button></td>
                 <td><button class="button numbutton" onclick="numberButton(2);">2</button></td>
