--- a/week9/lifegame.html
+++ b/week9/lifegame.html
@@ -16,32 +16,79 @@
         }
     </style>
 </head>
+
 <body>
-    <button>clear</button>
-    <button>stop</button>
-    <button>next</button>
-    <button>start</button><hr/>
+    <button onclick="clearWorld();">clear</button>
+    <button onclick="clearInterval(myInterval)">stop</button>
+    <button onclick="NextGeneration();">next</button>
+    <button onclick="myInterval = setInterval(NextGeneration, 300)">start</button><hr/>
     <div style="line-height:10px;">
-    <script>
-        const size=20;
 
-        for (i=0; i<size; i++){
-            for (j=0; j<size; j++){
-                id = i*size+j;
-                document.write('<div class=cell id=${id} onclick="Toggle(this, ${id});"></div>');
-            }
-            document.write("<br>");
-        }
+        <script>
+            const size = 20;
+            const arraySize = size * size;
+            const neighbor = [[-1, -1], [-1, 0], [-1, 1], [0, -1], [0, 1], [1, -1], [1, 0], [1, 1]];
+            var curr = Array(arraySize);
+            curr.fill(0);
+            var next = Array(arraySize);
 
-        function Toggle(element, id) {
-            if(element.style.backgroundColor == 'gray'){
-                element.style.backgroundColor = 'lightgray';
+            for (i = 0; i < size; i++) {
+                for (j = 0; j < size; j++) {
+                    id = i * size + j;
+                    document.write('<div class=cell id='+id+' onclick="Toggle(this, '+id+');"> </div>');
+                }
+                document.write("<br>");
             }
-            else {
-                element.style.backgroundColor = 'gray';
+
+            function Toggle(element, id) {
+                if (element.style.backgroundColor == 'gray') {
+                    element.style.backgroundColor = 'lightgray';
+                    curr[parseInt(id)] = 0;
+                }
+                else {
+                    element.style.backgroundColor = 'gray';
+                    curr[parseInt(id)] = 1;
+                }
             }
-        }
-    </script>
+
+            function clearWorld() {
+                curr.fill(0);
+                drawWorld();
+            }
+
+            function nextState(id) {
+                const i = parseInt(id / size);
+                const j = id % size;
+                let count = 0;
+                for (let k = 0; k < 8; k++) {
+                    const ii = i + neighbor[k][0];
+                    const jj = j + neighbor[k][1];
+                    if (ii < 0 || ii >= size) continue;
+                    if (jj < 0 || jj >= size) continue;
+                    if (curr[ii * size + jj] == 1) count++;
+                }
+                if (curr[i*size + j] == 1 && (count == 2 || count == 3)) return 1;
+                if (curr[i*size + j] == 0 && count == 3) return 1;
+                return 0;
+            }
+
+            function NextGeneration() {
+                console.log(curr);
+                for (let id = 0; id < arraySize; id++) next[id] = nextState(id);
+                for (let id = 0; id < arraySize; id++) curr[id] = next[id];
+                drawWorld();
+            }
+
+            function drawWorld() {
+                for (let id = 0; id < arraySize; id++) {
+                    element = document.getElementById(String(id));
+                    if (curr[id]) element.style.backgroundColor = "gray";
+                    else element.style.backgroundColor = 'lightgray';
+                }
+            }
+
+        </script>
     </div>
 </body>
+
 </html>
