--- a/week10/div.html
+++ b/week10/div.html
@@ -5,11 +5,25 @@
     <style>
         * {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+
         }
-        table {
+
+        table {}
+
+        body {
+
+            font-family: "나눔고딕", "Nanum Gothic", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 13px;
+            line-height: 1.428571429;
+            color: #333;
+            background-color: #fff
         }
+
         div {
             border-style: solid;
+            border: solid 1px black;
             width: 100%;
             height: 100%;
         }
@@ -17,13 +31,15 @@
         .main-container {
             position: relative;
             width: 1360px;
-            margin: 0;
+            margin: 0 auto;
             gap: 15px;
             justify-content: space-between;
         }
-        
+
         .wrap {
             display: flex;
+            gap: 15px;
+            justify-content: space-between;
         }
 
         #header {
@@ -33,23 +49,103 @@
             top: 0;
             background-color: #0c53b4;
         }
+
+        .logo {
+            margin-top: 10px;
+            margin-left: 30px;
+            display: inline-block;
+            font-size: 20px;
+            font-weight: 590;
+            color: white;
+            font-family: inherit;
+        }
+
+        img {
+            vertical-align: middle;
+        }
+
+        .logo img {
+            margin-right: 10px;
+        }
+
+
         #leftContent {
             float: left;
             width: 340px;
+            margin-top: 10px;
         }
+
+        .MyInfo {
+            position: relative;
+            padding: 6% 7%;
+            width: 100%;
+        }
+
+        .TestList {
+            position: relative;
+            margin: 15px 0px;
+        }
+
+        .BannerImg {
+            position: relative;
+            margin: 15px 0px;
+        }
+
+
+
         #rightContent {
             float: right;
             width: 1005px;
+            margin-top: 10px;
         }
-        
+
+        .Mid-Box {
+            width: 792px;
+        }
+
+        .Right-Box {
+            width: 200px;
+        }
+
+
+
+        .Mbox {
+            position: relative;
+            margin: 15px 0px;
+        }
+
+        .InnerBox {
+            position: relative;
+            margin: 0px 0px;
+        }
     </style>
 </head>
 
 <body>
-    <div id="header">헤더</div>
+    <div id="header">
+        <h1 class="logo"><img src="./files/동의대 마크.png" alt="동의대학교">DAP시스템</h1>
+    </div>
     <div id="content" class="main-container wrap">
-        <div id="leftContent">왼쪽</div>
-        <div id="rightContent">오른쪽</div>
+        <div id="leftContent">
+            <div class="MyInfo">내정보</div>
+            <div class="TestList">적성검사</div>
+            <div class=" Mbox">자율설계 프로젝트</div>
+            <div class="MonthlyDoor Mbox">이달의 door</div>
+        </div>
+        <div id="rightContent" class="">
+            <div>나의 역량지수</div>
+            <div class="wrap">
+                <div class="Mid-Box">
+                    <div class="mileage wrap Mbox">
+                        <div class="InnerBox">통합마일리지</div>
+                        <div>채용정보 안내</div>
+                    </div>
+                    <div class="notice Mbox">비교과프로그램 공지</div>
+                    <div class="notice Mbox">비교과프로그램 신청</div>
+                </div>
+                <div class="Right-Box">오른쪽 리스트</div>
+            </div>
+        </div>
     </div>
 </body>
 
