--- a/week10/div.html
+++ b/week10/div.html
@@ -124,6 +124,7 @@
 <body>
     <div id="header">
         <h1 class="logo"><img src="./files/동의대 마크.png" alt="동의대학교">DAP시스템</h1>
+        <span class="glyphicon glyphicon-bullhorn"></span>
     </div>
     <div id="content" class="main-container wrap">
         <div id="leftContent">
